section 2 grid fix and alignment

--- a/fabled/src/components/navbar/Navbar.css
+++ b/fabled/src/components/navbar/Navbar.css
@@ -4,7 +4,7 @@
   display: flex;
   text-align: center;
   padding: 7px 0 0 0;
-  height: 70px; 
+  height: 80px; 
   background-color: white;
 }
 
